fix sidebar li.errormsg spacing between image and text
spacing (padding) is not adjusted to font/image size change.

--- a/Sage-Like/sidebar/rssTreeView.css
+++ b/Sage-Like/sidebar/rssTreeView.css
@@ -154,8 +154,8 @@
 
 #rssTreeView li.errormsg {
 	--image-top: calc((var(--line-height-rss-view) - var(--tree-image-size)) / 2);
-	padding-inline-start: var(--rss-tree-indent);
 	list-style: none;
+	padding-inline-start: calc(var(--tree-image-size) + calc(var(--tree-image-size) / 8) );
 	background: rgb(255, 255, 220) url("/icons/errormsg.png") no-repeat left var(--image-top) / var(--tree-image-size) var(--tree-image-size);
 	color: crimson;
 	cursor: default;
